--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
               />
               <span class="feedback__toggler">
                 <svg class="feedback__toggler-icon" width="10" height="8">
-                  <use href="/images/icons.svg#icon-checkbox"></use>
+                  <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
