--- a/index.html
+++ b/index.html
@@ -575,6 +575,8 @@
             Leave your contacts and we will call you back
           </p>
 
+          <!-- FORM -->
+
           <form
             class="feedback-form"
             name="feedback"
@@ -592,7 +594,7 @@
                   type="text"
                   placeholder=""
                 />
-                <svg class="feedback__form-icon" width="24" height="24">
+                <svg class="feedback__form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-person"></use>
                 </svg>
               </div>
@@ -608,7 +610,7 @@
                   type="tel"
                   placeholder=""
                 />
-                <svg class="feedback__form-icon" width="24" height="24">
+                <svg class="feedback__form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </div>
@@ -624,7 +626,7 @@
                   type="email"
                   placeholder=""
                 />
-                <svg class="feedback__form-icon" width="24" height="24">
+                <svg class="feedback__form-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
@@ -660,7 +662,9 @@
               <a class="feedback__link" href="#">Privacy Policy</a>
             </label>
 
-            <button class="feedback__button hero__button">Send</button>
+            <button class="feedback__button hero__button" type="submit">
+              Send
+            </button>
           </form>
         </div>
       </div>
