fix margin input

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 
     <!-- Modal Form -->
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button
           class="modal__button-close"
